# parllama

./: .gitattributes  .gitignore  .mypy.ini  .pipeline-test  .pre-commit-config.yaml  .pylintrc  AUDIT-REMEDIATION.md  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  Pipfile  README.md  old-setup.cfg  project_design.md  pyproject.toml  pyrightconfig.json  pytest.ini  release_announcement.md  ruff.toml  setup.cfg  todos.md
.claude/: settings.json  statusline-cec8186b-fe48-47c0-9150-bde6d99d931d.local.json  statusline-dc14fad1-5a4c-420b-8a2c-65670fae604c.local.json
.codex/: hooks.json
.gemini/: settings.json
.github/actions/setup-python-uv/: action.yml
.github/actions/validate-version/: action.yml
.github/workflows/: build.yml  ci.yml  publish-dev.yml  publish.yml  release-pipeline.yml  release.yml
docs/: DOCUMENTATION_STYLE_GUIDE.md
docs/reference/: configuration.md
docs/superpowers/plans/: 2026-05-04-edit-continue.md
docs/superpowers/specs/: 2026-05-04-edit-continue-design.md
parllama/: __init__.py  __main__.py  app.py  app.tcss  chat_manager.py  chat_message.py  chat_message_container.py  chat_prompt.py  chat_session.py  check_for_updates.py  data_manager.py  docker_utils.py  help.md  icons.py  llm_config.py  llm_providers.py  llm_session_name.py  ollama_data_manager.py  par_event_system.py  par_logger.py  par_ollama_embeddings.py  passthrough_document_transformer.py  prompt_message.py  provider_manager.py  rag_manager.py  secrets_manager.py  session_manager.py  settings_manager.py  theme_manager.py  time_display.py  update_manager.py  utils.py
parllama/dialogs/: __init__.py  edit_prompt_dialog.py  error_dialog.py  help_dialog.py  import_fabric_dialog.py  information.py  input_dialog.py  model_details_dialog.py  password_dialog.py  text_dialog.py  yes_no_dialog.py
parllama/messages/: __init__.py  main.py  messages.py  par_chat_messages.py  par_messages.py  par_prompt_messages.py  par_session_messages.py  shared.py
parllama/models/: __init__.py  chat.py  chat_manager.py  chat_message.py  jobs.py  ollama_data.py  ollama_ps.py  rag.py  rag_base.py  rag_datasource.py  rag_pipeline.py  rag_stores.py  settings_data.py  token_stats.py
parllama/prompt_utils/: __init__.py  import_fabric.py
parllama/screens/: __init__.py  create_model_screen.py  create_model_screen.tcss  local_models_screen.py  local_models_screen.tcss  log_screen.py  log_screen.tcss  main_screen.py  main_screen.tcss  model_tools_screen.py  model_tools_screen.tcss  save_session.py  site_models_screen.py  site_models_screen.tcss
parllama/themes/: __init__.py  par.json
parllama/tools/: yt.py
parllama/validators/: __init__.py  http_validator.py
parllama/widgets/: __init__.py  chat_message.py  chat_message_list.py  chat_message_widget.py  chat_view.py  clickable_label.py  create_model_view.py  custom_prompt_message_edit.py  dbl_click_list_item.py  field_set.py  filter_input.py  grid_list.py  hidden_input.py  input_blur_submit.py  input_tab_complete.py  input_with_history.py  local_model_grid_list.py  local_model_list_item.py  local_model_select.py  local_model_view.py  log_view.py  model_create_view.py  model_tools_view.py  prompt_list.py  prompt_list_item.py  provider_model_select.py  session_config.py  session_list.py  session_list_item.py  site_model_list_item.py  site_model_list_view.py  site_model_view.py  textarea_tab_complete.py  user_input.py  user_text_area.py
parllama/widgets/views/: chat_tab.py  chat_view.py  create_model_view.py  local_model_view.py  log_view.py  model_tools_view.py  options_view.py  prompt_view.py  rag_view.py  secrets_view.py  site_model_view.py
src/parllama/: __init__.py  __main__.py  app.py  app.tcss  chat_manager.py  chat_message.py  chat_message_container.py  chat_prompt.py  chat_session.py  docker_utils.py  event_bus.py  help.md  icons.py  llm_config.py  llm_providers.py  llm_session_helpers.py  llm_session_name.py  memory_manager.py  message_sink.py  ollama_data_manager.py  par_event_system.py  par_ollama_embeddings.py  passthrough_document_transformer.py  provider_manager.py  rag_manager.py  retry_utils.py  secrets_manager.py  secure_file_ops.py  settings_manager.py  state_manager.py  theme_manager.py  time_display.py  update_manager.py  utils.py
src/parllama/coordinators/: __init__.py  clipboard_service.py  execution_coordinator.py  model_job_processor.py  ps_status_poller.py  session_event_router.py
src/parllama/dialogs/: __init__.py  edit_execution_template_dialog.py  edit_prompt_dialog.py  help_dialog.py  import_fabric_dialog.py  import_options_dialog.py  import_results_dialog.py  import_templates_dialog.py  input_dialog.py  model_details_dialog.py  password_dialog.py  select_template_dialog.py  text_dialog.py  theme_dialog.py  yes_no_dialog.py
src/parllama/execution/: __init__.py  command_executor.py  execution_manager.py  execution_result.py  execution_template.py  import_result.py  template_matcher.py
src/parllama/lib/: __init__.py  llm_config.py  llm_image_utils.py  llm_providers.py  output_utils.py  pricing_lookup.py  provider_cb_info.py  user_agents.py  utils.py  web_tools.py
src/parllama/messages/: __init__.py  _base.py  chat_messages.py  execution_messages.py  messages.py  model_messages.py  par_chat_messages.py  par_session_messages.py  prompt_messages.py  provider_messages.py  (+3 more)
tests/: conftest.py  test_app_coordinators.py  test_app_fanout.py  test_chat_session_notifications.py  test_chat_session_routing.py  test_command_executor.py  test_config_reference_docs.py  test_deferred_select.py  test_deferred_select_options.py  test_file_validator.py  test_manager_sink_migration.py  test_message_bus_par_events.py  test_message_sink.py  test_par_markdown.py  test_prompt_list_subscriptions.py  test_prompt_notifications.py  test_provider_model_select_subscriptions.py  test_provider_refresh_worker.py  test_provider_settings_panel.py  test_provider_startup_refresh.py  test_secrets_manager.py  test_secrets_manager_pytest.py  test_secure_file_ops.py  test_session_list_refresh.py  test_site_model_startup.py
(+62 files in other folders)
