[project]
name = "parllama"
dynamic = [
    "version",
]
description = "Terminal UI for Ollama and other LLM providers"
readme = "README.md"
url = "https://github.com/paulrobello/parllama"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = [
    "ollama",
    "llamacpp",
    "openai",
    "anthropic",
    "groq",
    "xai",
    "openrouter",
    "vision",
    "llm",
    "ai",
    "terminal",
    "tui",
]
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.14.2",
    "build>=1.3.0",
    "cryptography>=46.0.3",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "humanize>=4.14.0",
    "langchain>=1.0.7",
    "ollama>=0.6.1",
    "pydantic>=2.11.3",
    "pydantic-core>=2.33.1",
    "python-dotenv>=1.2.1",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "semver>=3.0.4",
    "textual>=6.6.0",
    "textual-fspicker>=0.6.0",
    "urllib3>=2.5.0",
    "rich-pixels>=3.0.1",
    "orjson>=3.11.4",
    "par-ai-core>=0.5.3",
    "clipman>=3.3.3",
    "xdg-base-dirs>=6.0.2",
    "google-genai>=1.50.1",
]
packages = [
    "src/parllama",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/parllama"
Documentation = "https://github.com/paulrobello/parllama/blob/main/README.md"
Source = "https://github.com/paulrobello/parllama"
Issues = "https://github.com/paulrobello/parllama/issues"
Discussions = "https://github.com/paulrobello/parllama/discussions"
Wiki = "https://github.com/paulrobello/parllama/wiki"

[project.scripts]
parllama = "parllama.__main__:run"

[project.optional-dependencies]
web = [
    "textual-serve>=1.1.2",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.407",
    "types-pytz>=2025.2.0.20251108",
    "types-requests>=2.32.4.20250913",
    "types-beautifulsoup4>=4.12.0.20250516",
    "pre-commit>=4.4.0",
    "google-api-python-client-stubs>=1.31.0",
    "pyinstrument>=5.1.1",
    "types-orjson>=3.6.2",
    "ruff>=0.14.5",
    "textual-dev>=1.8.0",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "hatchling>=1.27.0",
]

[tool.hatch.version]
path = "src/parllama/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/parllama",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/parllama",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]
