[project]
name = "parllama"
dynamic = [
    "version",
]
description = "Terminal UI for Ollama and other LLM providers"
readme = "README.md"
url = "https://github.com/paulrobello/parllama"
authors = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
maintainers = [
    { name = "Paul Robello", email = "probello@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Topic :: Terminals",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = [
    "ollama",
    "llamacpp",
    "openai",
    "anthropic",
    "groq",
    "xai",
    "openrouter",
    "vision",
    "llm",
    "ai",
    "terminal",
    "tui",
]
requires-python = ">=3.11"
dependencies = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.15.0",
    "build>=1.5.0",
    "cryptography>=49.0.0",
    "docker>=7.1.0",
    "httpx>=0.28.1",
    "humanize>=4.16.0",
    "langchain>=1.3.11",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "pydantic-core>=2.46.4",
    "python-dotenv>=1.2.2",
    "pytz>=2026.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "semver>=3.0.4",
    "textual>=8.2.8",
    "textual-fspicker>=1.0.1",
    "urllib3>=2.7.0",
    "rich-pixels>=3.0.1",
    "orjson>=3.11.9",
    "par-ai-core>=0.5.7",
    "clipman>=3.3.3",
    "xdg-base-dirs>=6.0.2",
    "google-genai>=2.10.0",
]
packages = [
    "src/parllama",
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/paulrobello/parllama"
Documentation = "https://github.com/paulrobello/parllama/blob/main/README.md"
Source = "https://github.com/paulrobello/parllama"
Issues = "https://github.com/paulrobello/parllama/issues"
Discussions = "https://github.com/paulrobello/parllama/discussions"
Wiki = "https://github.com/paulrobello/parllama/wiki"

[project.scripts]
parllama = "parllama.__main__:run"

[project.optional-dependencies]
web = [
    "textual-serve>=1.1.3",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "types-pytz>=2026.2.0.20260518",
    "types-requests>=2.33.0.20260518",
    "types-beautifulsoup4>=4.12.0.20250516",
    "pre-commit>=4.6.0",
    "google-api-python-client-stubs>=1.37.0",
    "pyinstrument>=5.1.2",
    "types-orjson>=3.6.2",
    "ruff>=0.15.20",
    "textual-dev>=1.8.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "hatchling>=1.30.1",
]

[tool.hatch.version]
path = "src/parllama/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [
    "src/parllama",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/parllama",
    "LICENSE",
    "README.md",
    "pyproject.toml",
]
exclude = [
    "*.pyc",
    "__pycache__",
    "*.so",
    "*.dylib",
]
