[metadata]
name = parllama
description = Terminal UI for Ollama
version = attr: parllama.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/paulrobello/parllama
author = Paul Robello
author_email = probello@gmail.com
maintainer = Paul Robello
maintainer_email = probello@gmail.com
license = License :: OSI Approved :: MIT License
license_files = LICENSE
keywords = ollama, ai, terminal, tui
classifiers =
    License :: OSI Approved :: MIT License
    Environment :: Console
    Development Status :: 4 - Beta
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Terminals
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Typing :: Typed
project_urls =
    Documentation = https://github.com/paulrobello/parllama/blob/main/README.md
    Source = https://github.com/paulrobello/parllama
    Issues = https://github.com/paulrobello/parllama/issues
    Discussions = https://github.com/paulrobello/parllama/discussions
    Wiki = https://github.com/paulrobello/parllama/wiki

[options]
packages = find:
platforms = any
include_package_data = True
install_requires =
    urllib3
    requests
    simplejson
    attrs
    certifi
    requests-file
    textual[syntax]
    textual-fspicker
    asyncio
    humanize
    argparse
    pyperclip
    rich
    python-dotenv
    pydantic
    ollama
    bs4
    docker
    google-api-python-client
    youtube-transcript-api
    isodate
    google-api-python-client-stubs


python_requires = >=3.10,<3.13

[options.package_data]
parllama =
    py.typed
    */*.png
    */*.json
    */*.md
    */*.tcss
    *.png
    *.json
    *.md
    *.tcss

[options.packages.find]
parllama = parllama

[options.entry_points]
console_scripts =
    parllama = parllama.__main__:run
